--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 <title>Welcome</title>
 
 </head>
+  <style>
+    *{
+     margin:0px auto;
+}
 
+html, body{
+     text-align:center;
+}
+  </style>
 <body background="bg1.jpeg">
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
