--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html, body{
      text-align:center;
 }
   </style>
-<body background="bg1.jpeg">
+<body background="bg1.jpg">
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
 
@@ -23,7 +23,7 @@ src="https://www.youtube.com/embed/sf_ZuVmj7jM?autoplay=1">
 </iframe>
 
 
-<br><h1>Register here..</h1><hr><br>
+<a href="https://goo.gl/cDM8aG">Register here..</a>
 
 </body>
 <footer><br><font face="Monotype Corsiva" size="20" color="indigo">Sometimes a small thing you do can mean everything in another person's life.</font></footer>
