--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ src="https://www.youtube.com/embed/sf_ZuVmj7jM?autoplay=1">
 </iframe>
 
 
-<a href="https://goo.gl/cDM8aG">Register here..</a>
+  <br><br><h2><a target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h2><br><br>
 
 </body>
 <footer><br><font face="Monotype Corsiva" size="20" color="indigo">Sometimes a small thing you do can mean everything in another person's life.</font></footer>
