--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@ html, body{
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
 
-<iframe width="420" height="315"
+<iframe width="840" height="630"
 src="https://www.youtube.com/embed/sf_ZuVmj7jM?autoplay=1">
 </iframe>
 
 
   <br><br><h2><a target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h2><br><br>
+  
+  <br><br><h2><a target="_blank" href="events.html">Event details</a></h2><br><br>
 
 </body>
 <footer><br><font face="Monotype Corsiva" size="20" color="indigo">Sometimes a small thing you do can mean everything in another person's life.</font></footer>
