--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 html, body{
      text-align:center;
 }
+    background-repeat: no-repeat;
   </style>
 <body background="bg1.jpg">
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
