--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 html, body{
      text-align:center;
 }
-    background-repeat: no-repeat;
+    
   </style>
-<body background="bg1.jpg">
+<body background="bg1.jpg" background-repeat = "no-repeat">
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
 
