--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="swapcss.css">
 <title>Events</title>
 </head>
-<body>
+<body background="bg1.jpg" background-repeat = "no-repeat">
 
 
 
@@ -26,10 +26,6 @@
    <h1>Health Check-up Camp</h1>
 </header>
   
-<nav>
-  <img src="health.jpg" alt="Nightware" width="250" height="250">
-</nav>
-
 <article>
   <h1>We have arranged health check up camp at trimal hospital,bibwewadi, pune </h1>
   <h1>        on 27th Sept 2016.it will free of cost.Everyone can take benefit of this camp.</h1>
