--- a/events.html
+++ b/events.html
@@ -4,7 +4,15 @@
 <link rel="stylesheet" type="text/css" href="swapcss.css">
 <title>Events</title>
 </head>
-<body background="bg1.jpg" background-repeat = "no-repeat">
+ 
+ <style type="text/css">
+
+body { 
+background-image: url(bg1.jpg); 
+background-repeat: no-repeat; 
+}
+</style>
+<body>
 
 
 
