--- a/events.html
+++ b/events.html
@@ -7,9 +7,12 @@
  
  <style type="text/css">
 
-body { 
-background-image: url(bg1.jpg); 
-background-repeat: no-repeat; 
+html { 
+  background: url(bg1.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 </style>
 <body>
