--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
 <title>Welcome</title>
 
 </head>
-  <style>
-    *{
-     margin:0px auto;
+  <style type="text/css">
+html { 
+  background: url(bg1.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
-
-html, body{
-     text-align:center;
-}
-    
-  </style>
-<body background="bg1.jpg" background-repeat = "no-repeat">
+</style>
+<body>
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
 
-<iframe width="840" height="350"
+<iframe width="750" height="350"
 src="https://www.youtube.com/embed/sf_ZuVmj7jM?autoplay=1">
 </iframe>
 
