--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  text-align:center;
+  *{
+    text-align:center; 
+    margin:0px auto;
+    
+}
 }
 </style>
 <body>
