--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ html {
 }
 </style>
 <body>
+  <center>
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
 
@@ -32,7 +33,7 @@ src="https://www.youtube.com/embed/sf_ZuVmj7jM?autoplay=1">
   <br><br><h2><a target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h2><br><br>
   
   <br><br><h2><a target="_blank" href="events.html">Event details</a></h2><br><br>
-
+  </center>
 </body>
 <footer><br><font face="Monotype Corsiva" size="20" color="indigo">Sometimes a small thing you do can mean everything in another person's life.</font></footer>
 </html>
