--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ src="https://www.youtube.com/embed/CD5cv-uQFmw?autoplay=1">
 </iframe>
 
 
-  <br><br><h2><a target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h2><br><br>
+    <br><br><h1><a> target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h1><br><br>
   
-  <br><br><h2><a target="_blank" href="events.html">Event details</a></h2><br><br>
+  <br><br><h1><a target="_blank" href="events.html">Event details</a></h1><br><br>
   </center>
 </body>
 <footer><br><font face="Monotype Corsiva" size="20" color="indigo">Sometimes a small thing you do can mean everything in another person's life.</font></footer>
