--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html {
 }
 }
 </style>
-<body>
+<body link="red">
   <center>
 <br><h1>Prayas - A Step Towards Change</h1><hr><br>
 
@@ -30,7 +30,7 @@ src="https://www.youtube.com/embed/CD5cv-uQFmw?autoplay=1">
 </iframe>
 
 
-    <br><br><h1><a> target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h1><br><br>
+    <br><br><h1><a target="_blank" href="https://goo.gl/cDM8aG">Register here..</a></h1><br><br>
   
   <br><br><h1><a target="_blank" href="events.html">Event details</a></h1><br><br>
   </center>
